<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textview_fight_quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fight_quiz_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textview_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: 1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_fight_quiz_title"/>
    <TextView
        android:id="@+id/textview_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Luke Skywalker"
        android:textSize="20sp"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_score"/>

    <TextView
        android:id="@+id/textview_beats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beats"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_winner"/>

    <TextView
        android:id="@+id/textview_loser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Darth Vader"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_beats"/>

    <ImageView
        android:id="@+id/imageview_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="80sp"
        android:layout_marginLeft="20sp"
        app:layout_constraintTop_toBottomOf="@id/textview_loser"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_success"/>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>