<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_people_quiz_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:paddingTop="5dp"
        android:paddingHorizontal="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/people_quiz_title" />
    <TextView
        android:id="@+id/tv_get_right_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Correct: 0"
        android:textSize="25sp"
        android:textColor="#28ED19"
        app:layout_constraintEnd_toStartOf="@id/tv_get_wrong_num"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_people_quiz_main_title"/>
    <TextView
        android:id="@+id/tv_get_wrong_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Wrong: 0"
        android:textSize="25sp"
        android:textColor="#97152F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/tv_get_right_num"
        app:layout_constraintTop_toBottomOf="@id/tv_people_quiz_main_title"/>



    <ImageView
        android:id="@+id/imageview_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="80sp"
        android:layout_marginLeft="20sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_get_right_num"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Congratulations"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_success"/>

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>