<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_film_page">

        <TextView
            android:id="@+id/textview_film_quiz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/film_quiz_title"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textview_score_film_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: 0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_film_quiz_title"/>

        <TextView
            android:id="@+id/textview_question_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_num"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_score_film_quiz"/>

        <TextView
            android:id="@+id/textview_question_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:textStyle="bold"

            android:lineSpacingExtra="20dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_question_num"/>
<!--        <TextView-->
<!--            android:id="@+id/textview_question_part_two"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10sp"-->
<!--            android:gravity="center"-->
<!--            android:textStyle="bold"-->
<!--            android:text="@string/filmQuestionPartB_1"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textview_question_part_one"/>-->

        <ImageView
            android:id="@+id/imageview_death_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100sp"
            android:layout_marginTop="80sp"
            android:layout_marginLeft="80sp"
            app:layout_constraintBottom_toTopOf="@id/textview_true_false"
            android:gravity="center"
            tools:ignore="MissingConstraints" />



        <TextView
            android:id="@+id/textview_true_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/true_false"
            android:textSize="30sp"
            android:layout_marginLeft="100sp"
            android:layout_marginBottom="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/barrier1"/>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:layout_constraintBottom_toTopOf="@id/button_true"/>

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="True"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="False"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_search_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorError"
        android:visibility="invisible"
        android:text="ERROR, Most likely couldn't connect with Star Wars API" />
    <!--CircularProgressIndiicator copied directly from https://github.com/osu-cs492-w22/MultiActivityGitHubSearch/blob/main/app/src/main/res/layout/activity_main.xml-->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="32dp"
        android:layout_gravity="top|center_horizontal"
        android:visibility="invisible" />
</FrameLayout>